[package]
authors = ["Hsiaopan <hsiaopan@outlook.com>"]
edition = "2018"
name = "fearless-concurrency"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messages-passing = {path = "./messages-passing"}
shared-state = {path = "./shared-state"}
extensible-concurrency = {path = "./extensible-concurrency"}

[workspace]
members = ["messages-passing","shared-state","extensible-concurrency"]

