[package]
name = "oop-demo"
version = "0.1.0"
authors = ["Hsiaopan <hsiaopan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["encapsulation-demo"]




[dependencies]
encapsulation-demo = {path = "./encapsulation-demo"}